// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adaptPrice() should adapt a legacy price object for a price range: price range - max 1`] = `
Object {
  "discount": Object {
    "excludingTaxes": 150.17,
    "includingTaxes": 180,
    "rate": 50,
  },
  "excludingTaxes": 150.17,
  "formatted": Object {
    "includingTaxes": "180,00 €",
    "includingTaxesWithoutDiscount": "250,00 €",
  },
  "isFormatted": true,
  "priceType": 0,
  "promocode": Object {
    "rate": 50,
  },
  "promotionType": "FullPrice",
  "tags": Array [
    "VAT",
  ],
  "taxes": Object {
    "amount": 20.83,
    "rate": 20,
    "type": "VAT",
  },
  "type": 1,
}
`;

exports[`adaptPrice() should adapt a legacy price object for a price range: price range - min 1`] = `
Object {
  "discount": Object {
    "excludingTaxes": 104.17,
    "includingTaxes": 125,
    "rate": 50,
  },
  "excludingTaxes": 104.17,
  "formatted": Object {
    "includingTaxes": "125,00 €",
    "includingTaxesWithoutDiscount": "250,00 €",
  },
  "isFormatted": true,
  "priceType": 0,
  "promocode": Object {
    "rate": 50,
  },
  "promotionType": "FullPrice",
  "tags": Array [
    "VAT",
  ],
  "taxes": Object {
    "amount": 20.83,
    "rate": 20,
    "type": "VAT",
  },
  "type": 0,
}
`;

exports[`adaptPrice() should adapt a legacy price object when it has no price: price for free item 1`] = `
Object {
  "discount": Object {
    "excludingTaxes": 0,
    "includingTaxes": 0,
    "rate": 0,
  },
  "excludingTaxes": 0,
  "formatted": Object {
    "includingTaxes": "0,00 €",
    "includingTaxesWithoutDiscount": "0,00 €",
  },
  "includingTaxes": 0,
  "includingTaxesWithoutDiscount": 0,
  "isFormatted": true,
  "tags": Array [
    "VAT",
  ],
  "taxes": Object {
    "amount": 0,
    "rate": 20,
    "type": "VAT",
  },
}
`;

exports[`adaptPrice() should adapt a legacy price object with "*InclTaxes" keys correctly: price with *InclTaxes keys adapter 1`] = `
Object {
  "discount": Object {
    "excludingTaxes": 104.17,
    "includingTaxes": 125,
    "rate": 50,
  },
  "excludingTaxes": 104.17,
  "formatted": Object {
    "includingTaxes": "125,00 €",
    "includingTaxesWithoutDiscount": "250,00 €",
  },
  "includingTaxes": 125,
  "includingTaxesWithoutDiscount": 250,
  "isFormatted": true,
  "priceType": 0,
  "promocode": Object {
    "rate": 50,
  },
  "promotionType": "FullPrice",
  "tags": Array [
    "VAT",
  ],
  "taxes": Object {
    "amount": 20.83,
    "rate": 20,
    "type": "VAT",
  },
  "type": 0,
}
`;

exports[`adaptPrice() should adapt a legacy price object with promotion percentage key: price with promotion percentage key adapter 1`] = `
Object {
  "discount": Object {
    "excludingTaxes": 104.17,
    "includingTaxes": 125,
    "rate": 50,
  },
  "excludingTaxes": 104.17,
  "formatted": Object {
    "includingTaxes": "125,00 €",
    "includingTaxesWithoutDiscount": "250,00 €",
  },
  "isFormatted": true,
  "priceType": 0,
  "promocode": Object {
    "rate": 50,
  },
  "promotionType": "FullPrice",
  "tags": Array [
    "VAT",
  ],
  "taxes": Object {
    "amount": 20.83,
    "rate": 20,
    "type": "VAT",
  },
  "type": 0,
}
`;

exports[`adaptPrice() should adapt a legacy price object without "*InclTaxes" keys correctly: price without *InclTaxes keys adapter 1`] = `
Object {
  "discount": Object {
    "excludingTaxes": 104.17,
    "includingTaxes": 125,
    "rate": 50,
  },
  "excludingTaxes": 104.17,
  "formatted": Object {
    "includingTaxes": "125,00 €",
    "includingTaxesWithoutDiscount": "250,00 €",
  },
  "includingTaxes": 125,
  "includingTaxesWithoutDiscount": 250,
  "isFormatted": true,
  "priceType": 0,
  "promocode": Object {
    "rate": 50,
  },
  "promotionType": "FullPrice",
  "tags": Array [
    "VAT",
  ],
  "taxes": Object {
    "amount": 20.83,
    "rate": 20,
    "type": "VAT",
  },
  "type": 0,
}
`;
